<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7F0">

    <View
        android:id="@+id/navbarBackground"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/white_navbar_background"
        android:elevation="1dp" />

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/user_cd"
        android:src="@drawable/ic_user"
        android:elevation="2dp" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/settings_cd"
        android:src="@drawable/ic_settings"
        android:elevation="1dp"
        android:background="@drawable/user_icon"/>

    <ScrollView
        android:id="@+id/scrollUserInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/navbarBackground"
        android:padding="24dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_background"
            android:elevation="4dp"
            android:padding="24dp"
            android:layout_marginTop="100dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivBackArrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:contentDescription="@string/back_cd"
                    android:focusable="true"
                    android:src="@drawable/ic_back_arrow"
                    tools:ignore="TouchTargetSizeCheck"
                    android:background="@drawable/user_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="70dp"
                    android:text="@string/user_profile_title"
                    android:textColor="#4B1D1D"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivEdit"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:contentDescription="@string/edit_cd"
                    android:focusable="true"
                    android:src="@drawable/ic_edit"
                    tools:ignore="TouchTargetSizeCheck"
                    android:background="@drawable/user_icon"
                 />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/first_name_label"
                android:textColor="#555"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:padding="14dp"
                android:text=""
                android:textColor="#333"
                android:textSize="16dp" />
            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="14dp"
                android:visibility="gone"
                android:textColor="#333"
                android:layout_marginBottom="16dp"
                android:textSize="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/last_name_label"
                android:textColor="#555"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:padding="14dp"
                android:text=""
                android:textColor="#333"
                android:textSize="16dp" />
            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="14dp"
                android:visibility="gone"
                android:textColor="#333"
                android:layout_marginBottom="16dp"
                android:textSize="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/email_hint"
                android:textColor="#555"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edittext_background"
                android:padding="14dp"
                android:text=""
                android:textColor="#333"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="14dp"
                android:visibility="gone"
                android:inputType="textEmailAddress"
                android:textColor="#333"
                android:layout_marginBottom="24dp"
                android:textSize="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="12dp"
                android:background="#CCCCCC" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="265dp"
                android:clickable="true"
                android:contentDescription="Delete"
                android:elevation="5dp"
                android:focusable="true"
                android:src="@drawable/ic_delete"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:backgroundTint="#A3D4C3"
                android:textColor="#fff"
                android:textStyle="bold"
                android:padding="14dp"
                android:background="@drawable/button_background"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
